# Domain-Adaptable-AI-Workflow-Demo-Platform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  compose.yml  pyproject.toml  pyrightconfig.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/worker/: pyproject.toml
data/sample_docs/: heewon_and_platform.md  heewon_platform_expanded.md  platform_only.md
docs/: architecture.md  docker-runbook.md  mac-native-transition-plan.md  open-webui-docker-migration.md  runtime-validation.md  skeleton-vs-service.md
docs/adr/: 0001-db-system-of-record.md  0002-deterministic-validator-and-cli-adapter.md  0003-monorepo-directory-separation.md  0004-open-webui-integration.md  0005-mac-native-qlora-rag-focus.md  0006-open-webui-primary-frontend.md  0007-docker-only-default-runtime.md  0008-remove-fine-tuning-from-core.md  0009-runtime-adapter-abstraction.md  0010-graph-rag-in-repo.md  0011-agentdocker-vs-host-verification.md
examples/: ft_smoke_instruction_dataset.jsonl  ls-add-demo.csv
scripts/: e2e_compose_smoke.sh  e2e_docker_stack_smoke.sh  e2e_evaluation_set_smoke.py  e2e_ft_smoke_fallback.py  e2e_helpers.py  e2e_job_queue_processing.py  e2e_model_gating_smoke.py  e2e_ollama_inference_smoke.py  e2e_openwebui_tools_smoke.py  e2e_plc_stub_pipeline.py  e2e_qlora_rag_dataset_smoke.py  e2e_rag_collection_workflow_smoke.py  e2e_rag_document_management.py  e2e_rag_evaluation_report_smoke.py  e2e_rag_index_smoke.py  e2e_run_all.sh  e2e_runtime_smoke.py  e2e_workflow_real_model_smoke.py  ft_smoke_preflight.sh  ft_smoke_test.sh
shared/: README.md
(+134 files in other folders)
