[project]
name = "industrial-ai-harness-platform"
version = "0.4.0"
description = "Monorepo-ready industrial AI skeleton with a relational PLC test automation platform"
requires-python = "==3.11.*"
dependencies = [
  "industrial-ai-api",
  "industrial-ai-worker",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
]

[tool.uv.sources]
industrial-ai-api = { workspace = true }
industrial-ai-worker = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
