[project]
name = "industrial-ai-harness-platform"
version = "0.7.0"
description = "Mac-native MLX fine-tuning and inference platform"
requires-python = ">=3.11"
dependencies = [
  "industrial-ai-api",
]

[tool.uv.workspace]
members = [
  "apps/api",
]

[tool.uv.sources]
industrial-ai-api = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
